--- a/notebooks/CluStream-Welford-quick-test (temporary notebook).ipynb
+++ b/notebooks/CluStream-Welford-quick-test (temporary notebook).ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51.34182095527649\n",
+      "48.19476914405823\n",
       "2.15 MB\n"
      ]
     }
@@ -61,96 +61,96 @@
     {
      "data": {
       "text/plain": [
-       "{0: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': 0.9417154046806644,\n",
-       "              'elevel': -1.3965781047011498,\n",
-       "              'salary': -0.6797144480784211,\n",
-       "              'zipcode': 0.3705035674606598,\n",
-       "              'hyears': -1.016348894188071,\n",
-       "              'car': -0.07212002278507135,\n",
+       "{0: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 0.9417154046806644,\n",
+       "              'car': -1.3965781047011498,\n",
+       "              'zipcode': -0.6797144480784211,\n",
+       "              'hvalue': 0.3705035674606598,\n",
+       "              'salary': -1.016348894188071,\n",
+       "              'hyears': -0.07212002278507135,\n",
        "              'commission': 0.17919648727485687,\n",
        "              'age': -0.8310992152709882}),\n",
-       " 1: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': -1.3090373644593587,\n",
-       "              'elevel': 0.1938877412491041,\n",
-       "              'salary': 0.9932497035351971,\n",
-       "              'zipcode': -0.6469816305475048,\n",
-       "              'hyears': -0.33366798379566953,\n",
-       "              'car': 1.6456717605826776,\n",
+       " 1: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': -1.3090373644593587,\n",
+       "              'car': 0.1938877412491041,\n",
+       "              'zipcode': 0.9932497035351971,\n",
+       "              'hvalue': -0.6469816305475048,\n",
+       "              'salary': -0.33366798379566953,\n",
+       "              'hyears': 1.6456717605826776,\n",
        "              'commission': -0.5588897658482705,\n",
        "              'age': -0.514156663052727}),\n",
-       " 2: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': 134624.92700148802,\n",
-       "              'elevel': 1.009586534702096,\n",
-       "              'salary': 52088.81623155219,\n",
-       "              'zipcode': 3.4686295345226705,\n",
-       "              'hyears': 11.349041475756811,\n",
+       " 2: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 2.4041193322985697,\n",
+       "              'car': -1.5310825928736305,\n",
+       "              'zipcode': 0.796465840293551,\n",
+       "              'hvalue': -2.0036485171514045,\n",
+       "              'salary': -0.596962748085702,\n",
+       "              'hyears': 1.503680882481937,\n",
+       "              'commission': 1.221436413076672,\n",
+       "              'age': -0.9011201503953835}),\n",
+       " 3: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 1.009586534702096,\n",
        "              'car': 9.0955766848894,\n",
+       "              'zipcode': 3.4686295345226705,\n",
+       "              'hvalue': 134624.92700148802,\n",
+       "              'salary': 52088.81623155219,\n",
+       "              'hyears': 11.349041475756811,\n",
        "              'commission': 50741.9388746409,\n",
        "              'age': 53.18844539666057}),\n",
-       " 3: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': -0.45369873012461615,\n",
-       "              'elevel': 0.08023304241061141,\n",
-       "              'salary': -1.2581032977244673,\n",
-       "              'zipcode': 0.5522200050609998,\n",
-       "              'hyears': 2.227577292070218,\n",
-       "              'car': -1.355241493551267,\n",
-       "              'commission': -1.9815330795532842,\n",
-       "              'age': 0.2882437455810757}),\n",
-       " 4: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': -0.11912331108457304,\n",
-       "              'elevel': 1.8043299319195407,\n",
-       "              'salary': -0.16036217905701025,\n",
-       "              'zipcode': -0.05065971364872301,\n",
-       "              'hyears': -0.19087388960126034,\n",
-       "              'car': -0.990606238348301,\n",
+       " 4: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': -0.11912331108457304,\n",
+       "              'car': 1.8043299319195407,\n",
+       "              'zipcode': -0.16036217905701025,\n",
+       "              'hvalue': -0.05065971364872301,\n",
+       "              'salary': -0.19087388960126034,\n",
+       "              'hyears': -0.990606238348301,\n",
        "              'commission': 0.6730299840253856,\n",
        "              'age': -1.324082464472022}),\n",
-       " 5: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': 1.166490138238534,\n",
-       "              'elevel': 0.008376179502044914,\n",
-       "              'salary': 0.5036300563785048,\n",
-       "              'zipcode': -0.5527646971207058,\n",
-       "              'hyears': -0.9201936678335405,\n",
-       "              'car': 1.8002633604412994,\n",
+       " 5: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 1.166490138238534,\n",
+       "              'car': 0.008376179502044914,\n",
+       "              'zipcode': 0.5036300563785048,\n",
+       "              'hvalue': -0.5527646971207058,\n",
+       "              'salary': -0.9201936678335405,\n",
+       "              'hyears': 1.8002633604412994,\n",
        "              'commission': 0.46854978225277916,\n",
        "              'age': 1.2070031793653448}),\n",
-       " 6: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': 0.18712289779980942,\n",
-       "              'elevel': 2.6116075272560475,\n",
-       "              'salary': 0.35750004836441207,\n",
-       "              'zipcode': -1.029804804536397,\n",
-       "              'hyears': 0.7685090969541892,\n",
-       "              'car': 0.42529911585764635,\n",
+       " 6: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 0.18712289779980942,\n",
+       "              'car': 2.6116075272560475,\n",
+       "              'zipcode': 0.35750004836441207,\n",
+       "              'hvalue': -1.029804804536397,\n",
+       "              'salary': 0.7685090969541892,\n",
+       "              'hyears': 0.42529911585764635,\n",
        "              'commission': -2.321149973492559,\n",
        "              'age': -0.11590422906128793}),\n",
-       " 7: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': 102672.71263535286,\n",
-       "              'elevel': 2.0668355055715013,\n",
-       "              'salary': 100698.7645626835,\n",
-       "              'zipcode': 5.771246394029875,\n",
-       "              'hyears': 13.869982962588683,\n",
-       "              'car': 7.739650302513228,\n",
-       "              'commission': 6.2938018968465775e-12,\n",
-       "              'age': 49.80476639551435}),\n",
-       " 8: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': -0.9248190034741935,\n",
-       "              'elevel': -0.5676659199936664,\n",
-       "              'salary': -0.8108888130650165,\n",
-       "              'zipcode': -0.5607173124842788,\n",
-       "              'hyears': -0.7363841038040713,\n",
-       "              'car': -0.37900852336705276,\n",
+       " 7: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 0.9801990211840204,\n",
+       "              'car': 0.8011650401167723,\n",
+       "              'zipcode': -0.33943540831298874,\n",
+       "              'hvalue': -1.2126242150471978,\n",
+       "              'salary': 0.4912935493074279,\n",
+       "              'hyears': -1.1458279458387148,\n",
+       "              'commission': 1.3246786624104563,\n",
+       "              'age': -0.3062675465966934}),\n",
+       " 8: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': -0.9248190034741935,\n",
+       "              'car': -0.5676659199936664,\n",
+       "              'zipcode': -0.8108888130650165,\n",
+       "              'hvalue': -0.5607173124842788,\n",
+       "              'salary': -0.7363841038040713,\n",
+       "              'hyears': -0.37900852336705276,\n",
        "              'commission': 0.23896969923651049,\n",
        "              'age': 0.5968890727968448}),\n",
-       " 9: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x133c26210>>, 0, 1),\n",
-       "             {'hvalue': -1.1102432745276205,\n",
-       "              'elevel': -0.9515379395659727,\n",
-       "              'salary': -0.4291525093014532,\n",
-       "              'zipcode': 0.06374559279155836,\n",
-       "              'hyears': 0.09772937172900069,\n",
-       "              'car': -2.0439815288694376,\n",
-       "              'commission': 1.7040273506937484,\n",
-       "              'age': -0.8901940183523208})}"
+       " 9: defaultdict(functools.partial(<bound method Random.gauss of <random.Random object at 0x1542ef410>>, 0, 1),\n",
+       "             {'elevel': 2.0668355055715013,\n",
+       "              'car': 7.739650302513228,\n",
+       "              'zipcode': 5.771246394029875,\n",
+       "              'hvalue': 102672.71263535286,\n",
+       "              'salary': 100698.7645626835,\n",
+       "              'hyears': 13.869982962588683,\n",
+       "              'commission': 6.293807127231073e-12,\n",
+       "              'age': 49.80476639551435})}"
       ]
      },
      "execution_count": 3,
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "9"
       ]
      },
      "execution_count": 4,
