--- a/notebooks/Visualization demo using Holoviews (for clustering problem).ipynb
+++ b/notebooks/Visualization demo using Holoviews (for clustering problem).ipynb
@@ -33,20 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FBeta: 0.00%"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from river import metrics\n",
     "\n",
@@ -108,23 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CohenKappa: -25.00%\n",
-      "VBeta: 51.58%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from river import metrics\n",
     "\n",
     "y_true = [0, 0, 1, 1, 2, 2]\n",
-    "y_pred = [1, 1, 1, 0, 0, 0]\n",
+    "y_pred = [1, 1, 2, 2, 0, 0]\n",
     "\n",
     "kappa = metrics.CohenKappa()\n",
     "vbeta = metrics.VBeta(beta=1.0)\n",
@@ -162,79 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:param.notebook_extension: Holoviews bokeh extension could not be imported, it raised the following exception: ValueError('ClassSelector parameter None value must be an instance of (function, tuple), not <function size at 0x106d37df0>.')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3398, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/61/9lp84j310_n_cd49jd7rcf600000gn/T/ipykernel_28351/3977996271.py\", line 28, in <cell line: 28>\n",
-      "    hv.extension('bokeh')\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/pyviz_comms/__init__.py\", line 64, in __new__\n",
-      "    return param.ParameterizedFunction.__new__(cls, *args, **kwargs)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/param/parameterized.py\", line 3654, in __new__\n",
-      "    return inst.__call__(*args,**params)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/holoviews/ipython/__init__.py\", line 116, in __call__\n",
-      "    super().__call__(*args, **params)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/holoviews/util/__init__.py\", line 702, in __call__\n",
-      "    raise ImportError('None of the backends could be imported')\n",
-      "ImportError: None of the backends could be imported\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 1993, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 698, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 645, in included_pieces\n",
-      "    scope_pieces = self.scope_pieces\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 585, in scope_pieces\n",
-      "    for piece in self.source.pieces\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 90, in pieces\n",
-      "    return list(self._clean_pieces())\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 114, in _clean_pieces\n",
-      "    raise AssertionError(\"Pieces mismatches: %s\" % mismatches)\n",
-      "AssertionError: Pieces mismatches: [{680, 681}, {696, 695}, {708, 709}, {714, 715}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import itertools\n",
@@ -271,79 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:param.notebook_extension: Holoviews bokeh extension could not be imported, it raised the following exception: ValueError('ClassSelector parameter None value must be an instance of (function, tuple), not <function size at 0x106d37df0>.')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3398, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/61/9lp84j310_n_cd49jd7rcf600000gn/T/ipykernel_28351/3964737512.py\", line 1, in <cell line: 1>\n",
-      "    hv.extension('bokeh')\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/pyviz_comms/__init__.py\", line 64, in __new__\n",
-      "    return param.ParameterizedFunction.__new__(cls, *args, **kwargs)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/param/parameterized.py\", line 3654, in __new__\n",
-      "    return inst.__call__(*args,**params)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/holoviews/ipython/__init__.py\", line 116, in __call__\n",
-      "    super().__call__(*args, **params)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/holoviews/util/__init__.py\", line 702, in __call__\n",
-      "    raise ImportError('None of the backends could be imported')\n",
-      "ImportError: None of the backends could be imported\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 1993, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 698, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 645, in included_pieces\n",
-      "    scope_pieces = self.scope_pieces\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 585, in scope_pieces\n",
-      "    for piece in self.source.pieces\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 90, in pieces\n",
-      "    return list(self._clean_pieces())\n",
-      "  File \"/Users/ngohoanganh/opt/miniconda3/envs/river/lib/python3.9/site-packages/stack_data/core.py\", line 114, in _clean_pieces\n",
-      "    raise AssertionError(\"Pieces mismatches: %s\" % mismatches)\n",
-      "AssertionError: Pieces mismatches: [{680, 681}, {696, 695}, {708, 709}, {714, 715}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hv.extension('bokeh')\n",
     "\n",
@@ -473,13 +313,20 @@
    "source": [
     "run_experiment(streaming_df, tracked_models)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "river",
+   "display_name": "river_extra",
    "language": "python",
-   "name": "river"
+   "name": "river_extra"
   },
   "language_info": {
    "codemirror_mode": {
@@ -491,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
